@@ -1,0 +1,27 @@
+<?xml version='1.0'?>
+<TestDescriptor>
+    <Name>Test the handling of IDREFs with forward references</Name>
+    <Author>Werner Guttmann</Author>
+    <Comment>
+        Test unmarshalling of xsd:IDREF content elements, and check for
+        various error conditions during unmarshalling and marshalling
+        when forward references are involved.
+    </Comment>
+    <Category>basic capability</Category>
+    <SourceGeneratorTest>
+        <Schema>test.xsd</Schema>
+        <BindingFile>binding.xml</BindingFile>
+        <Root_Object random="false" dump="true">PartialTermination</Root_Object>
+        <UnitTestCase>
+            <Configuration>
+                <Unmarshal>
+                    <Call-method name="setValidation">
+                        <Value type="boolean">true</Value>
+                    </Call-method>
+                </Unmarshal>
+            </Configuration>
+            <Name>Test valid XML document instance with IDREFs that has forward references</Name>
+            <Input>input.xml</Input>
+        </UnitTestCase>
+    </SourceGeneratorTest>
+</TestDescriptor>
